--- a/PS ai.ipynb
+++ b/PS ai.ipynb
@@ -30,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![5.png](https://github.com/NiverMtz/AI-Project-FI-UNAM/blob/master/5.png)"
+    "![5.png](5.png)"
    ]
   },
   {
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Captura_IBM.PNG](https://github.com/NiverMtz/AI-Project-FI-UNAM/blob/master/Captura_IBM.PNG)"
+    "![Captura_IBM.PNG](Captura_IBM.PNG)"
    ]
   },
   {
